attempt to fix image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     color:black;
 }
 .bg-image2 {
-    background: url('assets/slider.jpg');
+    background: url('/assets/slider.png');
     background-repeat: no-repeat;
     min-height: 200px;
     background-size: cover;
